welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
			retourne(); avance(); avance(); }
                                                    ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche(); avance(); if (getCouleurSol() != Color.green) {
                                    ^