welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
baisseBrosse();
avance();

def isFacingTrail():Boolean = {
	if (getCouleurSol() == Color.green) {
		avance();
	} else {
		gauche(); avance(); if (getCouleurSol() != Color.green) {
			retourne(); avance(); avance(); }
		}
	}
           